# fastapi-quickstart

./: LICENSE  README.md  config.py  main.py  pyproject.toml  setup.py
assets/project/templates/: index.html
conf/: constants.py  helper.py
fastapi_quickstart/: config.py  main.py  run.py
fastapi_quickstart/conf/: constants.py  file_handler.py  helper.py
fastapi_quickstart/conf/constants/: __init__.py  docker.py  fastapi.py  filepaths.py  poetry.py
fastapi_quickstart/setup/: __init__.py  base.py  clean.py  docker.py  fastapi.py  libraries.py  static.py  venv.py
fastapi_quickstart/setup_assets/: .gitignore  main.py
fastapi_quickstart/setup_assets/backend/: __init__.py  dependencies.py  main.py
fastapi_quickstart/setup_assets/backend/database/: models.py
fastapi_quickstart/setup_assets/backend/routers/: items.py  users.py
fastapi_quickstart/setup_assets/database/: __init__.py
fastapi_quickstart/setup_assets/frontend/templates/: _base.html
fastapi_quickstart/setup_assets/frontend/templates/components/: navbar.html
fastapi_quickstart/setup_assets/templates/: _base.html
fastapi_quickstart/tests/: test_filepaths.py
fastapi_quickstart/utils/: printables.py
setup/: __init__.py  base.py  clean.py  fastapi.py  libraries.py  static.py  venv.py
setup_assets/: constants.py  tailwind.config.js
setup_assets/static/js/: theme-toggle.js
setup_assets/templates/: _base.html
setup_assets/templates/components/: mobile-nav.html  navbar.html
utils/: helper.py  printables.py
