[tool.poetry]
name = "fastapi-quickstart"
version = "1.0.0"
description = "A quickstart tool for creating a FastAPI project with Jinja2, TailwindCSS, Flowbite, HTMX, and AlpineJS."
authors = ["Ryan Partridge <rpartridge101@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.scripts]
create = "fastapi_quickstart.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
